--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "@next/font": "^14.2.15",
     "@vercel/analytics": "^1.5.0",
+    "contentlayer": "^0.3.4",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
+    "next-contentlayer": "^0.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
