--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "contentlayer": "^0.3.4",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.513.0",
-    "next": "15.3.3",
-    "next-contentlayer": "^0.3.4",
+    "next": "^15.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
